src/main/default/objects/omnitracker__OmniTracker_Settings__c/omnitracker__OmniTracker_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Used in OmniTracker App</description>
    <label>OmniTracker Settings</label>
</CustomObject>