src/main/default/objects/omnitracker__OmniTracker_Settings__c/fields/omnitracker__IncludeOnlyActive__c.field-meta.xml
<CustomField>
    <fullName>omnitracker__IncludeOnlyActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To Include Active Records only if checked</description>
    <label>IncludeOnlyActive</label>
    <type>Checkbox</type>
</CustomField>