src/main/default/objects/omnitracker__OmniTracker_Settings__c/fields/omnitracker__NameSpaceToUse__c.field-meta.xml
<CustomField>
    <fullName>omnitracker__NameSpaceToUse__c</fullName>
    <label>Name Space To Use</label>
    <length>20</length>
    <type>Text</type>
</CustomField>