src/main/default/objects/omnitracker__OmniTracker_Settings__c/fields/omnitracker__UseNewDataModel__c.field-meta.xml
<CustomField>
    <fullName>omnitracker__UseNewDataModel__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To check on which data model to perform search</description>
    <label>UseNewDataModel</label>
    <type>Checkbox</type>
</CustomField>